--- a/src/Cake.Issues.PullRequests.GitHubActions.Tests/Cake.Issues.PullRequests.GitHubActions.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.GitHubActions.Tests/Cake.Issues.PullRequests.GitHubActions.Tests.csproj
@@ -5,12 +5,12 @@
     <IsPackable>false</IsPackable>
     <Product>Cake.Issues</Product>
     <Copyright>Copyright © Pascal Berger and contributors</Copyright>
-    <Description>Tests for the Cake.Issues.PullRequests.GitHub addin</Description>
+    <Description>Tests for the Cake.Issues.PullRequests.GitHubActions addin</Description>
     <Authors>Pascal Berger</Authors>
   </PropertyGroup>
 
   <PropertyGroup>
-    <CodeAnalysisRuleSet>..\Cake.Issues.PullRequests.GitHub.Tests.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\Cake.Issues.PullRequests.GitHubActions.Tests.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cake.Issues.PullRequests.GitHub\Cake.Issues.PullRequests.GitHub.csproj" />
+    <ProjectReference Include="..\Cake.Issues.PullRequests.GitHubActions\Cake.Issues.PullRequests.GitHubActions.csproj" />
   </ItemGroup>
 
 </Project>
