--- a/nuspec/nuget/Cake.Issues.PullRequests.GitHubActions.nuspec
+++ b/nuspec/nuget/Cake.Issues.PullRequests.GitHubActions.nuspec
@@ -17,7 +17,7 @@
     </description>
     <licenseUrl>https://github.com/cake-contrib/Cake.Issues.PullRequests.GitHubActions/blob/develop/LICENSE</licenseUrl>
     <projectUrl>https://cakeissues.net</projectUrl>
-    <iconUrl>https://cdn.rawgit.com/cake-contrib/graphics/a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</iconUrl>
+    <icon>icon.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <repository type="git" url="https://github.com/cake-contrib/Cake.Issues.PullRequests.GitHubActions"/>
     <copyright>Copyright © Pascal Berger</copyright>
@@ -25,6 +25,7 @@
     <releaseNotes>https://github.com/cake-contrib/Cake.Issues.PullRequests.GitHubActions/releases/tag/0.9.0</releaseNotes>
   </metadata>
   <files>
+    <file src="..\..\..\..\nuspec\nuget\icon.png" target="" />
     <file src="netstandard2.0\Cake.Issues.PullRequests.GitHubActions.dll" target="lib\netstandard2.0" />
     <file src="netstandard2.0\Cake.Issues.PullRequests.GitHubActions.pdb" target="lib\netstandard2.0" />
     <file src="netstandard2.0\Cake.Issues.PullRequests.GitHubActions.xml" target="lib\netstandard2.0" />
