--- a/nuspec/nuget/Cake.Issues.PullRequests.GitHubActions.nuspec
+++ b/nuspec/nuget/Cake.Issues.PullRequests.GitHubActions.nuspec
@@ -15,7 +15,7 @@
 
       See the Project Site for an overview of the whole ecosystem of addins for working with issues in Cake scripts.
     </description>
-    <licenseUrl>https://github.com/cake-contrib/Cake.Issues.PullRequests.GitHubActions/blob/develop/LICENSE</licenseUrl>
+    <license type="expression">MIT</license>
     <projectUrl>https://cakeissues.net</projectUrl>
     <icon>icon.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
