--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,41 @@ jobs:
         with:
           name: NuGet Package
           path: ./BuildArtifacts/Packages/NuGet/
+  # Integration Tests Windows (.NET Framework)
+  Test_Windows_DotNetFramework:
+    name: Integration Tests Windows (.NET Framework)
+    needs: Build
+    runs-on: windows-latest
+    steps:
+      - name: Get the sources
+        uses: actions/checkout@v2
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: NuGet Package
+          path: ./BuildArtifacts/Packages/NuGet
+      - name: Run integration tests
+        run: ./build.ps1 -verbosity diagnostic
+        working-directory: ./tests/integration/
+        shell: powershell
+  # Integration Tests Windows (.NET Core tool)
+  Test_Windows_DotNetCoreTool:
+    name: Integration Tests Windows (.NET Core tool)
+    needs: Build
+    runs-on: windows-latest
+    steps:
+      - name: Get the sources
+        uses: actions/checkout@v2
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: NuGet Package
+          path: ./BuildArtifacts/Packages/NuGet
+      - name: Restore .NET Core tool
+        run: dotnet tool restore
+        working-directory: ./tests/integration/
+        shell: powershell
+      - name: Run integration tests
+        run: dotnet cake
+        working-directory: ./tests/integration/
+        shell: powershell
